--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             </ul>
         </nav>
     </header>
-    <main class="hero"></main>
-
-    <article class="search-engine-optimization">
+    <img class="hero"></img>
+<main>
+    <section class="search-engine-optimization">
         <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
         <h2>Search Engine Optimization</h2>
         <p>
@@ -28,8 +28,8 @@
             travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
             your visibility and find the right customers for your business.
         </p>
-    </article>
-    <article id="online-reputation-management" class="online-reputation-management">
+    </section>
+    <section id="online-reputation-management" class="online-reputation-management">
         <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
         <h2>Online Reputation Management</h2>
         <p>
@@ -37,8 +37,8 @@
             internet connection to say whatever they want about your business. Online Reputation Management gives
             you the control over what potential customers see when they search for your business.
         </p>
-    </article>
-    <article id="social-media-marketing" class="social-media-marketing">
+    </section>
+    <section id="social-media-marketing" class="social-media-marketing">
         <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
         <h2>Social Media Marketing</h2>
         <p>
@@ -46,35 +46,35 @@
             determine which platforms are suited to your brand, using analytics to find the right markets and
             increase your lead generation.
         </p>
-    </article>
-    <aside class="content">
-        <section class="benefits">
-            <article class="benefit-lead">
-                <h4>Lead Generation</h4>
-                <img src="./assets/images/lead-generation.png" />
-                <p>
-                    Inbound strategies for lead generation require less work for your business, bringing customers
-                    directly to your website.
-                </p>
-            </article>
-            <article class="benefit-brand">
-                <h4>Brand Awareness</h4>
-                <img src="./assets/images/brand-awareness.png" />
-                <p>
-                    Users find your business through paid and organic searches, increasing the search ranking and
-                    visibility for your business.
-                </p>
-            </article>
-            <article class="benefit-cost">
-                <h4>Cost Management</h4>
-                <img src="./assets/images/cost-management.png" />
-                <p>
-                    As the search ranking for your business increases, your advertising costs decrease, and you no
-                    longer need to advertise your page.
-                </p>
-            </article>
-        </section>
+    </section>
+</main>
+    <aside class="benefits">
+        <article class="benefit-lead">
+            <h4>Lead Generation</h4>
+            <img src="./assets/images/lead-generation.png" />
+            <p>
+                Inbound strategies for lead generation require less work for your business, bringing customers
+                directly to your website.
+            </p>
+        </article>
+        <article class="benefit-brand">
+            <h4>Brand Awareness</h4>
+            <img src="./assets/images/brand-awareness.png" />
+            <p>
+                Users find your business through paid and organic searches, increasing the search ranking and
+                visibility for your business.
+            </p>
+        </article>
+        <article class="benefit-cost">
+            <h4>Cost Management</h4>
+            <img src="./assets/images/cost-management.png" />
+            <p>
+                As the search ranking for your business increases, your advertising costs decrease, and you no
+                longer need to advertise your page.
+            </p>
+        </article>
     </aside>
+
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
