--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             </ul>
         </nav>
     </header>
-    <figure class="hero"></figure>
+    <figure class="hero"></figure> 
     <article class="content">
         <section id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="picture of a notebook next to a lapot about search engine optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -36,7 +36,7 @@
             </p>
         </section>
         <section id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg"alt="picture of a guy on his laptop looking at a graph" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -45,7 +45,7 @@
         </p>
         </section>
         <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg"alt="picture of individuals at a meeting discussiong about socila media marketing" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
              Social media continues to have a sizable influence on buying habits. Social media marketing helps you
