changed header div on css to header nav

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <figure class="hero"></figure> 
+    <figure class="hero" alt="image of four individuals in a meeting"></figure> 
     <article class="content">
         <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="picture of a notebook next to a lapot about search engine optimization" class="float-left" />
