--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
+    <title>Horiseon website</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
 </head>
 
 <body>
@@ -24,68 +24,78 @@
             </ul>
         </nav>
     </header>
-    <figure class="hero" alt="image of four individuals in a meeting"></figure> 
-    <article class="content">
-        <section id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="picture of a notebook next to a lapot about search engine optimization" class="float-left" />
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they
-                travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
-                your visibility and find the right customers for your business.
-            </p>
-        </section>
-        <section id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg"alt="picture of a guy on his laptop looking at a graph" class="float-right" />
-            <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an
-                internet connection to say whatever they want about your business. Online Reputation Management gives
-                you the control over what potential customers see when they search for your business.
-        </p>
-        </section>
-        <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg"alt="picture of individuals at a meeting discussiong about socila media marketing" class="float-left" />
-            <h2>Social Media Marketing</h2>
-            <p>
-             Social media continues to have a sizable influence on buying habits. Social media marketing helps you
-             determine which platforms are suited to your brand, using analytics to find the right markets and
-             increase your lead generation.
-        </p>
-        </section>
-    </article>
-    <section class="benefits">
-        <article class="benefit-lead">
-            <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers
-                directly to your website.
-            </p>
+    <main>
+        <section class="hero"></section>
+        <article class="content">
+            <section id="search-engine-optimization" class="search-engine-optimization">
+                <img src="./assets/images/search-engine-optimization.jpg"
+                    alt="its an image with a laptop, coffe, notebook, with pencils" class="float-left" />
+                <h2>Search Engine Optimization</h2>
+                <p>
+                    The dominance of mobile internet use means that users are searching for the right business as they
+                    travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
+                    your visibility and find the right customers for your business.
+                </p>
+            </section>
+            <section id="online-reputation-management" class="online-reputation-management">
+                <img src="./assets/images/online-reputation-management.jpg"
+                    alt=" A man on the computer on his phone and it says reputation wiht a graph" class="float-right" />
+                <h2>Online Reputation Management</h2>
+                <p>
+                    The web is full of opinions, and some of these can be negative. Social media allows anyone with an
+                    internet connection to say whatever they want about your business. Online Reputation Management
+                    gives you the control over what potential customers see when they search for your business.
+                </p>
+            </section>
+            <section id="social-media-marketing" class="social-media-marketing">
+                <img src="./assets/images/social-media-marketing.jpg"
+                    alt=" it is a bunch of people at a table conference talking about social media, there are computers, tablets and social media words"
+                    class="float-left" />
+                <h2>Social Media Marketing</h2>
+                <p>
+                    Social media continues to have a sizable influence on buying habits. Social media marketing helps
+                    you determine which platforms are suited to your brand, using analytics to find the right markets
+                    and increase your lead generation.
+                </p>
+            </section>
         </article>
-        <article class="benefit-brand">
-            <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+        <aside>
+            <section class="benefits">
+                <article class="benefit-lead">
+                    <h3>Lead Generation</h3>
+                    <img src="./assets/images/lead-generation.png" />
+                    <p>
+                        Inbound strategies for lead generation require less work for your business, bringing customers
+                        directly
+                        to your website.
+                    </p>
+                </article>
+                <article class="benefit-brand">
+                    <h3>Brand Awareness</h3>
+                    <img src="./assets/images/brand-awareness.png" />
+                    <p>
+                        Users find your business through paid and organic searches, increasing the search ranking and
+                        visibility
+                        for your business.
+                    </p>
+                </article>
+                <article class="benefit-cost">
+                    <h3>Cost Management</h3>
+                    <img src="./assets/images/cost-management.png" />
+                    <p>
+                        As the search ranking for your business increases, your advertising costs decrease, and you no
+                        longer
+                        need to advertise your page.
+                    </p>
+                </article>
+        </aside>
+        <footer class="footer">
+            <h4>Made with ❤️️ by Horiseon</h4>
             <p>
-                Users find your business through paid and organic searches, increasing the search ranking and
-                visibility for your business.
+                &copy; 2019 Horiseon Social Solution Services, Inc.
             </p>
-        </article>
-        <article class="benefit-cost">
-            <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no
-                longer need to advertise your page.
-            </p>
-        </article>
-    </section>
-    <footer class="footer">
-        <h4>Made with ❤️️ by Horiseon</h4>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
-    </footer>
+        </footer>
+    </main>
 </body>
 
 </html>
